# Distributed-Web-Crawler

./: .gitignore  README.md  index.html  pyproject.toml  script.js  styles.css
assets/: IMG_1607.HEIC  IMG_2929.HEIC
crawler/: __init__.py  cli.py  coordinator.py  html.py  rag.py  storage.py  worker.py
neural-network-simulator/: README.md  index.html  script.js  styles.css
tests/: test_crawler.py
