[project]
name = "distributed-crawler"
version = "0.1.0"
description = "Distributed async web crawler for 50k+ pages"
requires-python = ">=3.9"
dependencies = [
  "aiohttp>=3.9",
]

[project.scripts]
crawler-coordinator = "crawler.cli:run_coordinator"
crawler-worker = "crawler.cli:run_worker"
crawler-rag = "crawler.cli:run_rag_query"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
